Aggiorna il nome del progetto in "ShareForge" nei componenti SiteFooter e share.js per coerenza

--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -15,7 +15,7 @@ const linkClasses = {
 ---
 
 <footer class={`space-y-2 ${baseClasses} ${variants[variant] ?? variants.default} ${className}`}>
-  <p data-i18n="footer.version">Riformula v1.0 - PWA Offline-First</p>
+  <p data-i18n="footer.version">ShareForge v1.0 - PWA Offline-First</p>
   <a
     href="https://github.com/aborruso/in_due_tocchi"
     target="_blank"
